--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 
 		
 
-		<link rel="modulepreload" href="/_app/start-6375000f.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-52401ce2.js">
-		<link rel="modulepreload" href="/_app/layout.svelte-f6e99a1b.js">
-		<link rel="modulepreload" href="/_app/pages/index.svelte-98bfa18e.js">
+		<link rel="modulepreload" href="/_app/start-2cd2f215.js">
+		<link rel="modulepreload" href="/_app/chunks/vendor-b26160f4.js">
+		<link rel="modulepreload" href="/_app/pages/__layout.svelte-07520fe7.js">
+		<link rel="modulepreload" href="/_app/pages/index.svelte-04f74b06.js">
 		<link rel="stylesheet" href="/_app/assets/start-a8cd1609.css">
+		<link rel="stylesheet" href="/_app/assets/vendor-0d113491.css">
+		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-dd7667bd.css">
 
 		<script type="module">
-			import { start } from "/_app/start-6375000f.js";
+			import { start } from "/_app/start-2cd2f215.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -28,8 +30,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/layout.svelte-f6e99a1b.js"),
-						import("/_app/pages/index.svelte-98bfa18e.js")
+						import("/_app/pages/__layout.svelte-07520fe7.js"),
+						import("/_app/pages/index.svelte-04f74b06.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -45,8 +47,10 @@
 		<div id="svelte">
 
 
-<h1>Welcome to SvelteKit</h1>
-<p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
+<div class="nekomata-ui svelte-10132p3"><header class="svelte-r7zgy7 nm-ui-appbar-top  nm-ui-appbar-header nm-ui-appbar-style"><div class=" nm-ui-row svelte-1vo6beu"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button></div></header>
+    <aside class="nm-ui-drawer svelte-16wd86k nm-ui-drawer-left     nm-ui-drawer-inactive-left    nm-ui-drawer-modal"><header class="svelte-r7zgy7     nm-ui-appbar-a-top  nm-ui-appbar-a-header nm-ui-appbar-a-style"><div class=" nm-ui-row svelte-1vo6beu"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button></div></header></aside>
+    <h1>Welcome to SvelteKit</h1>
+<p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p></div>
 
 
 
