--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-2cd2f215.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-b26160f4.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-07520fe7.js">
-		<link rel="modulepreload" href="/_app/pages/index.svelte-04f74b06.js">
-		<link rel="stylesheet" href="/_app/assets/start-a8cd1609.css">
-		<link rel="stylesheet" href="/_app/assets/vendor-0d113491.css">
-		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-dd7667bd.css">
+		<link rel="modulepreload" href="_app/start-2cd2f215.js">
+		<link rel="modulepreload" href="_app/chunks/vendor-b26160f4.js">
+		<link rel="modulepreload" href="_app/pages/__layout.svelte-07520fe7.js">
+		<link rel="modulepreload" href="_app/pages/index.svelte-04f74b06.js">
+		<link rel="stylesheet" href="_app/assets/start-a8cd1609.css">
+		<link rel="stylesheet" href="_app/assets/vendor-0d113491.css">
+		<link rel="stylesheet" href="_app/assets/pages/__layout.svelte-dd7667bd.css">
 
 		<script type="module">
-			import { start } from "/_app/start-2cd2f215.js";
+			import { start } from "_app/start-2cd2f215.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -30,8 +30,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/pages/__layout.svelte-07520fe7.js"),
-						import("/_app/pages/index.svelte-04f74b06.js")
+						import("_app/pages/__layout.svelte-07520fe7.js"),
+						import("_app/pages/index.svelte-04f74b06.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
