--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" href="_app/assets/pages/__layout.svelte-dd7667bd.css">
 
 		<script type="module">
-			import { start } from "_app/start-2cd2f215.js";
+			import { start } from "/_app/start-2cd2f215.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
