--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		
 
-		<link rel="modulepreload" href="_app/start-2cd2f215.js">
+		<link rel="modulepreload" href="/_app/start-2cd2f215.js">
 		<link rel="modulepreload" href="_app/chunks/vendor-b26160f4.js">
 		<link rel="modulepreload" href="_app/pages/__layout.svelte-07520fe7.js">
 		<link rel="modulepreload" href="_app/pages/index.svelte-04f74b06.js">
@@ -30,8 +30,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("_app/pages/__layout.svelte-07520fe7.js"),
-						import("_app/pages/index.svelte-04f74b06.js")
+						import("/_app/pages/__layout.svelte-07520fe7.js"),
+						import("/_app/pages/index.svelte-04f74b06.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
