--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-2cd2f215.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-b26160f4.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-07520fe7.js">
-		<link rel="modulepreload" href="/_app/pages/index.svelte-04f74b06.js">
+		<link rel="modulepreload" href="_app/start-2cd2f215.js">
+		<link rel="modulepreload" href="_app/chunks/vendor-b26160f4.js">
+		<link rel="modulepreload" href="_app/pages/__layout.svelte-07520fe7.js">
+		<link rel="modulepreload" href="_app/pages/index.svelte-04f74b06.js">
 		<link rel="stylesheet" href="_app/assets/start-a8cd1609.css">
 		<link rel="stylesheet" href="_app/assets/vendor-0d113491.css">
 		<link rel="stylesheet" href="_app/assets/pages/__layout.svelte-dd7667bd.css">
