--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-a141c64a.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-b26160f4.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-07520fe7.js">
-		<link rel="modulepreload" href="/_app/pages/index.svelte-04f74b06.js">
-		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
-		<link rel="stylesheet" href="/_app/assets/vendor-93df6ba1.css">
-		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-091ad8e9.css">
+		<link rel="modulepreload" href="_app/start-a141c64a.js">
+		<link rel="modulepreload" href="_app/chunks/vendor-b26160f4.js">
+		<link rel="modulepreload" href="_app/pages/__layout.svelte-07520fe7.js">
+		<link rel="modulepreload" href="_app/pages/index.svelte-04f74b06.js">
+		<link rel="stylesheet" href="_app/assets/start-61d1577b.css">
+		<link rel="stylesheet" href="_app/assets/vendor-93df6ba1.css">
+		<link rel="stylesheet" href="_app/assets/pages/__layout.svelte-091ad8e9.css">
 
 		<script type="module">
 			import { start } from "/_app/start-a141c64a.js";
