--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 
 		
 
-		<link rel="modulepreload" href="_app/start-a141c64a.js">
-		<link rel="modulepreload" href="_app/chunks/vendor-b26160f4.js">
-		<link rel="modulepreload" href="_app/pages/__layout.svelte-07520fe7.js">
-		<link rel="modulepreload" href="_app/pages/index.svelte-04f74b06.js">
-		<link rel="stylesheet" href="_app/assets/start-61d1577b.css">
-		<link rel="stylesheet" href="_app/assets/vendor-93df6ba1.css">
-		<link rel="stylesheet" href="_app/assets/pages/__layout.svelte-091ad8e9.css">
+		<link rel="modulepreload" href="/nekomata-ui/_app/start-be131c92.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/chunks/vendor-b26160f4.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/pages/__layout.svelte-07520fe7.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/pages/index.svelte-04f74b06.js">
+		<link rel="stylesheet" href="/nekomata-ui/_app/assets/start-61d1577b.css">
+		<link rel="stylesheet" href="/nekomata-ui/_app/assets/vendor-93df6ba1.css">
+		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/__layout.svelte-091ad8e9.css">
 
 		<script type="module">
-			import { start } from "/_app/start-a141c64a.js";
+			import { start } from "/nekomata-ui/_app/start-be131c92.js";
 			start({
 				target: document.querySelector("#svelte"),
-				paths: {"base":"","assets":""},
+				paths: {"base":"/nekomata-ui","assets":""},
 				session: {},
 				host: location.host,
 				route: true,
@@ -30,8 +30,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/pages/__layout.svelte-07520fe7.js"),
-						import("/_app/pages/index.svelte-04f74b06.js")
+						import("/nekomata-ui/_app/pages/__layout.svelte-07520fe7.js"),
+						import("/nekomata-ui/_app/pages/index.svelte-04f74b06.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
