--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
 		
 
-		<link rel="modulepreload" href="/nekomata-ui/_app/start-775c965a.js">
-		<link rel="modulepreload" href="/nekomata-ui/_app/chunks/vendor-d740f436.js">
-		<link rel="modulepreload" href="/nekomata-ui/_app/pages/__layout.svelte-b4e96d6a.js">
-		<link rel="modulepreload" href="/nekomata-ui/_app/pages/index.svelte-33d1cff8.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/start-b9b971ad.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/chunks/vendor-a3a894aa.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/pages/__layout.svelte-15857ce4.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/pages/index.svelte-711a4585.js">
 		<link rel="stylesheet" href="/nekomata-ui/_app/assets/start-61d1577b.css">
-		<link rel="stylesheet" href="/nekomata-ui/_app/assets/vendor-93df6ba1.css">
-		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/__layout.svelte-501f2c99.css">
+		<link rel="stylesheet" href="/nekomata-ui/_app/assets/vendor-b8110e45.css">
+		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/__layout.svelte-21a19e78.css">
 		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/index.svelte-5f3f6fe2.css">
 
 		<script type="module">
-			import { start } from "/nekomata-ui/_app/start-775c965a.js";
+			import { start } from "/nekomata-ui/_app/start-b9b971ad.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"/nekomata-ui","assets":""},
@@ -31,8 +31,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/nekomata-ui/_app/pages/__layout.svelte-b4e96d6a.js"),
-						import("/nekomata-ui/_app/pages/index.svelte-33d1cff8.js")
+						import("/nekomata-ui/_app/pages/__layout.svelte-15857ce4.js"),
+						import("/nekomata-ui/_app/pages/index.svelte-711a4585.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -48,7 +48,8 @@
 		<div id="svelte">
 
 
-<div class="nekomata-ui svelte-8cnzwe"><header class="svelte-r7zgy7 nm-ui-appbar-top  nm-ui-appbar-header nm-ui-appbar-style"><div class=" nm-ui-row svelte-1vo6beu"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button></div></header>
+<div class="nekomata-ui svelte-1k8u735"><header class="svelte-r7zgy7 nm-ui-appbar-top  nm-ui-appbar-header nm-ui-appbar-style"><div class=" nm-ui-row svelte-1vo6beu"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button></div></header>
+    <div class="svelte-qv33oh nm-ui-overlay"></div>
     <aside class="nm-ui-drawer svelte-16wd86k nm-ui-drawer-left     nm-ui-drawer-inactive-left    nm-ui-drawer-modal"><header class="svelte-r7zgy7     nm-ui-appbar-a-top  nm-ui-appbar-a-header nm-ui-appbar-a-style"><div class=" nm-ui-row svelte-1vo6beu"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button></div></header></aside>
     
 
