--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
 		
 
-		<link rel="modulepreload" href="/nekomata-ui/_app/start-b9b971ad.js">
-		<link rel="modulepreload" href="/nekomata-ui/_app/chunks/vendor-a3a894aa.js">
-		<link rel="modulepreload" href="/nekomata-ui/_app/pages/__layout.svelte-15857ce4.js">
-		<link rel="modulepreload" href="/nekomata-ui/_app/pages/index.svelte-711a4585.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/start-0dacb11b.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/chunks/vendor-3d99dc6a.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/pages/__layout.svelte-bf735f08.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/pages/index.svelte-9f5b2acf.js">
 		<link rel="stylesheet" href="/nekomata-ui/_app/assets/start-61d1577b.css">
-		<link rel="stylesheet" href="/nekomata-ui/_app/assets/vendor-b8110e45.css">
-		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/__layout.svelte-21a19e78.css">
-		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/index.svelte-5f3f6fe2.css">
+		<link rel="stylesheet" href="/nekomata-ui/_app/assets/vendor-790baa19.css">
+		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/__layout.svelte-d9fca6b1.css">
+		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/index.svelte-cf7bfcab.css">
 
 		<script type="module">
-			import { start } from "/nekomata-ui/_app/start-b9b971ad.js";
+			import { start } from "/nekomata-ui/_app/start-0dacb11b.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"/nekomata-ui","assets":""},
@@ -31,12 +31,12 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/nekomata-ui/_app/pages/__layout.svelte-15857ce4.js"),
-						import("/nekomata-ui/_app/pages/index.svelte-711a4585.js")
+						import("/nekomata-ui/_app/pages/__layout.svelte-bf735f08.js"),
+						import("/nekomata-ui/_app/pages/index.svelte-9f5b2acf.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
-						path: "/",
+						path: "\u002F",
 						query: new URLSearchParams(""),
 						params: {}
 					}
@@ -48,17 +48,21 @@
 		<div id="svelte">
 
 
-<div class="nekomata-ui svelte-1k8u735"><header class="svelte-r7zgy7 nm-ui-appbar-top  nm-ui-appbar-header nm-ui-appbar-style"><div class=" nm-ui-row svelte-1vo6beu"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button></div></header>
+<div class="nekomata-ui svelte-14tolup"><header class="svelte-r7zgy7 nm-ui-appbar-top  nm-ui-appbar-header nm-ui-appbar-style"><div class="svelte-1udfk41 nm-ui-flex-box-row"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button>
+            <a href="/" class="svelte-14tolup">Nekomata-ui</a></div></header>
     <div class="svelte-qv33oh nm-ui-overlay"></div>
-    <aside class="nm-ui-drawer svelte-16wd86k nm-ui-drawer-left     nm-ui-drawer-inactive-left    nm-ui-drawer-modal"><header class="svelte-r7zgy7     nm-ui-appbar-a-top  nm-ui-appbar-a-header nm-ui-appbar-a-style"><div class=" nm-ui-row svelte-1vo6beu"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button></div></header></aside>
+    <aside class="nm-ui-drawer svelte-d71h88 nm-ui-drawer-left     nm-ui-drawer-inactive-left    nm-ui-drawer-modal"><div class="svelte-1udfk41   nm-ui-flex-box-column"><header class="svelte-r7zgy7     nm-ui-appbar-a-top  nm-ui-appbar-a-header nm-ui-appbar-a-style"><div class="svelte-1udfk41 nm-ui-flex-box-row"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button>
+                    <a href="/" class="svelte-14tolup">Nekomata-ui</a></div></header>
+            <ul><li>about</li></ul></div></aside>
     
 
-<div class="grid svelte-1fndeld"><div class=" nm-ui-grid-container svelte-acvjnw"><div class="item svelte-1fndeld"><h1 class="svelte-1fndeld">Welcome to Nekomata-ui</h1>
-            <p class="svelte-1fndeld">This website is under construction!</p></div></div></div></div>
+<div class="grid svelte-17xibkk"><div class=" nm-ui-grid-container svelte-acvjnw"><div class="item svelte-17xibkk"><h1 class="svelte-17xibkk">Nekomata-ui</h1>
+            <p>Svelte UI component library that focuses on delivering components and features that can be adaptable to your application needs.</p></div>
+        <div class="box svelte-17xibkk"></div></div></div></div>
 
 
 
-	
-</div>
+			
+		</div>
 	</body>
 </html>
