--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 		
 
-		<link rel="modulepreload" href="/nekomata-ui/_app/start-5ec40555.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/start-b7b9c9b5.js">
 		<link rel="modulepreload" href="/nekomata-ui/_app/chunks/vendor-3d99dc6a.js">
-		<link rel="modulepreload" href="/nekomata-ui/_app/pages/__layout.svelte-eed710a0.js">
+		<link rel="modulepreload" href="/nekomata-ui/_app/pages/__layout.svelte-969a3f84.js">
 		<link rel="modulepreload" href="/nekomata-ui/_app/pages/index.svelte-9f5b2acf.js">
 		<link rel="stylesheet" href="/nekomata-ui/_app/assets/start-61d1577b.css">
 		<link rel="stylesheet" href="/nekomata-ui/_app/assets/vendor-790baa19.css">
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="/nekomata-ui/_app/assets/pages/index.svelte-cf7bfcab.css">
 
 		<script type="module">
-			import { start } from "/nekomata-ui/_app/start-5ec40555.js";
+			import { start } from "/nekomata-ui/_app/start-b7b9c9b5.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"/nekomata-ui","assets":""},
@@ -31,7 +31,7 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/nekomata-ui/_app/pages/__layout.svelte-eed710a0.js"),
+						import("/nekomata-ui/_app/pages/__layout.svelte-969a3f84.js"),
 						import("/nekomata-ui/_app/pages/index.svelte-9f5b2acf.js")
 					],
 					page: {
@@ -49,10 +49,10 @@
 
 
 <div class="nekomata-ui svelte-14tolup"><header class="svelte-r7zgy7 nm-ui-appbar-top  nm-ui-appbar-header nm-ui-appbar-style"><div class="svelte-1udfk41 nm-ui-flex-box-row"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button>
-            <a href="https://open-anthro-projects.github.io/nekomata-ui" class="svelte-14tolup">Nekomata-ui</a></div></header>
+            <a href="/nekomata-ui" class="svelte-14tolup">Nekomata-ui</a></div></header>
     <div class="svelte-qv33oh nm-ui-overlay"></div>
     <aside class="nm-ui-drawer svelte-d71h88 nm-ui-drawer-left     nm-ui-drawer-inactive-left    nm-ui-drawer-modal"><div class="svelte-1udfk41   nm-ui-flex-box-column"><header class="svelte-r7zgy7     nm-ui-appbar-a-top  nm-ui-appbar-a-header nm-ui-appbar-a-style"><div class="svelte-1udfk41 nm-ui-flex-box-row"><button class="svelte-b3ogbj nm-ui-icon-button nm-ui-icon-button-style"><svg class="svelte-iefcmt nm-ui-svg-icon" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"></path></svg></button>
-                    <a href="https://open-anthro-projects.github.io/nekomata-ui" class="svelte-14tolup">Nekomata-ui</a></div></header>
+                    <a href="/nekomata-ui" class="svelte-14tolup">Nekomata-ui</a></div></header>
             <ul><li>about</li></ul></div></aside>
     
 
